--- a/css.e-comB/main.css
+++ b/css.e-comB/main.css
@@ -103,7 +103,7 @@
   }
   .B-Hero .left-sec {
     margin-top: 8em;
-    margin-right: 7em;
+    margin-right: 5em;
   }
   .B-Hero .left-sec .casestudy {
     font-size: 1em;
@@ -167,7 +167,7 @@
     font-weight: 100;
     line-height: 1.4em;
     color: rgb(237, 237, 237);
-    margin-bottom: 0;
+    margin-bottom: 3em;
   }
   .meetmya .image {
     align-items: center;
@@ -178,7 +178,7 @@
     border-color: white;
     border-width: 0.1em;
     border-style: solid;
-    margin: 3em 14em 6em 14em;
+    margin: 12em 14em 8em 14em;
     padding: 0.4em 4em 0.4em 4em;
   }
   .expectation .maintxt {
@@ -306,7 +306,7 @@
     color: rgb(225, 225, 225);
   }
   .checkout-payment {
-    margin-top: 2.5em;
+    margin-top: 5.5em;
     display: flex;
     justify-content: space-between;
     gap: 1em;
@@ -315,7 +315,7 @@
     width: 55%;
   }
   .checkout-payment .maintxt {
-    margin-top: 9em;
+    margin-top: 5.3em;
     font-size: 1.4em;
     font-weight: 600;
     line-height: 0;
@@ -346,7 +346,7 @@
     color: rgb(238, 238, 238);
   }
   .competitive-analysis {
-    margin-top: 1em;
+    margin-top: 4em;
     text-align: center;
   }
   .competitive-analysis .maintxt {
@@ -355,8 +355,8 @@
     line-height: 0;
   }
   .competitive-analysis .bodytxt {
-    margin-right: 12em;
-    margin-left: 12em;
+    margin-right: 10em;
+    margin-left: 10em;
     font-size: 1em;
     font-weight: 100;
     line-height: 1.4em;
@@ -367,9 +367,39 @@
     align-items: center;
   }
   .persona {
-    margin-top: 8em;
+    background-color: rgb(255, 255, 255);
     position: absolute;
+    top: 0;
     left: 0;
+    padding: 0% 5% 0% 5%;
+    background-size: contain;
+    background-position-x: 20%;
+    background-position-y: 20%;
+    width: 90%;
+    height: 130vh;
+    margin-top: 416em;
+    color: rgb(9, 9, 9);
+    display: flex;
+    justify-content: space-between;
+  }
+  .persona .wrapper {
+    margin-top: 4em;
+  }
+  .persona .wrapper .maintext {
+    font-size: 1.4em;
+    font-weight: 600;
+    line-height: 0;
+  }
+  .persona .info {
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+  }
+  .persona .info .txt-wrap {
+    display: flex;
+  }
+  .persona .info .txt-wrap justify-content:last baseline .body {
+    text-align: left;
   }
   .infor-archi {
     margin-top: 80em;
