--- a/css.e-comB/main.scss
+++ b/css.e-comB/main.scss
@@ -106,7 +106,7 @@
         display:flex;
         .left-sec{
             margin-top: 8em;
-            margin-right: 7em;
+            margin-right: 5em;
             .casestudy{
                 font-size: 1em;
                 font-size: medium;
@@ -171,7 +171,7 @@
             font-weight: 100;
             line-height: 1.4em;
             color: rgb(237, 237, 237);
-            margin-bottom: 0;
+            margin-bottom: 3em;
         }
         .image{
             align-items: center;
@@ -183,7 +183,7 @@
         border-color: white;
         border-width: 0.1em;
         border-style: solid;
-        margin: 3em 14em 6em 14em;
+        margin: 12em 14em 8em 14em;
         padding: 0.4em 4em 0.4em 4em;
         .maintxt{
             font-size: 1.4em;
@@ -313,7 +313,7 @@
         }
     }
     .checkout-payment{
-        margin-top: 2.5em;
+        margin-top: 5.5em;
         display: flex;
         justify-content: space-between;
         gap: 1em;
@@ -322,7 +322,7 @@
             width: 55%;
         }
         .maintxt{
-            margin-top: 9em;
+            margin-top: 5.3em;
             font-size: 1.4em;
             font-weight: 600;
             line-height: 0;
@@ -354,7 +354,7 @@
         }
     }
     .competitive-analysis{
-        margin-top: 1em;
+        margin-top: 4em;
         text-align: center;
         .maintxt{
             font-size: 1.4em;
@@ -362,8 +362,8 @@
             line-height: 0;
         }
         .bodytxt{
-            margin-right: 12em;
-            margin-left: 12em;
+            margin-right: 10em;
+            margin-left: 10em;
             font-size: 1em;
             font-weight: 100;
             line-height: 1.4em;
@@ -375,9 +375,42 @@
         }
     }
     .persona{
-        margin-top: 8em;
+        background-color: rgb(255, 255, 255);
         position: absolute;
+        top: 0;
         left: 0;
+        padding: 0% 5% 0% 5%;
+        background-size: contain;
+        background-position-x: 20%;
+        background-position-y: 20%;
+        width: 90%;
+        height: 130vh;
+        margin-top: 416em;
+        color: rgb(9, 9, 9);
+        display: flex;
+        justify-content: space-between;
+        .wrapper{
+            margin-top: 4em;
+            .maintext{
+                font-size: 1.4em;
+                font-weight: 600;
+                line-height: 0;
+            }
+        }
+        .info{
+            margin-top: 1em;
+            display: flex;
+            justify-content: space-between;
+            .txt-wrap{
+                display: flex;
+                justify-content:last baseline
+                .body{
+                    text-align: left;
+                }
+            }
+        }
+
+
     }
     .infor-archi{
         margin-top: 80em;
